ai-telemetry/base/postgresql-ha/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql-ha-pgpool
  labels:
    app.kubernetes.io/instance: postgresql-ha
    app.kubernetes.io/name: postgresql-ha
    app.kubernetes.io/component: pgpool
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: postgresql-ha
      app.kubernetes.io/name: postgresql-ha
      app.kubernetes.io/component: pgpool
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: postgresql-ha
        app.kubernetes.io/name: postgresql-ha
        app.kubernetes.io/component: pgpool
    spec:
      automountServiceAccountToken: false
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: postgresql-ha
                    app.kubernetes.io/name: postgresql-ha
                    app.kubernetes.io/component: pgpool
                topologyKey: kubernetes.io/hostname
              weight: 1
      serviceAccountName: postgresql-ha
      # Auxiliary vars to populate environment variables
      containers:
        - name: pgpool
          image: docker.io/bitnami/pgpool:4.5.4-debian-12-r2
          imagePullPolicy: "IfNotPresent"
          ports:
            - name: postgresql
              containerPort: 5432
              protocol: TCP
          livenessProbe:
            failureThreshold: 5
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /opt/bitnami/scripts/pgpool/healthcheck.sh
          readinessProbe:
            failureThreshold: 5
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - bash
                - -ec
                - 'PGPASSWORD=$PGPOOL_POSTGRES_PASSWORD psql -U "postgres" -d "postgres" -h /opt/bitnami/pgpool/tmp -tA -c "SELECT 1" >/dev/null'
          resources:
            limits:
              cpu: 1
              ephemeral-storage: 2Gi
              memory: 1Gi
            requests:
              cpu: 500m
              ephemeral-storage: 100Mi
              memory: 100Mi
          volumeMounts:
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/pgpool/etc
              subPath: app-etc-dir
            - name: empty-dir
              mountPath: /opt/bitnami/pgpool/conf
              subPath: app-conf-dir
            - name: empty-dir
              mountPath: /opt/bitnami/pgpool/tmp
              subPath: app-tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/pgpool/logs
              subPath: app-logs-dir
      volumes:
        - name: empty-dir
          emptyDir: {}
