ai-telemetry/base/postgresql-ha/service-pgpool.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-ha-pgpool
  labels:
    app.kubernetes.io/instance: postgresql-ha
    app.kubernetes.io/name: postgresql-ha
    app.kubernetes.io/component: pgpool
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: "postgresql"
      port: 5432
      targetPort: postgresql
      protocol: TCP
  selector:
    app.kubernetes.io/instance: postgresql-ha
    app.kubernetes.io/name: postgresql-ha
    app.kubernetes.io/component: pgpool
